--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "tq-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Trash Queens Server",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
